Changed paths xml file in demo app

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="images" path="Android/data/com.stetel.printerdemo/files/Pictures" />
-    <external-path name="images" path="Android/data/com.stetel.printerdemo/cache" />
+    <external-path name="cache" path="Android/data/com.stetel.printerdemo/cache" />
 </paths>
